fixed work images

--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,28 @@ section {
 .description {
   margin: auto;
 }
+
+@media (min-width: 600px) {
+  button + button,
+  input + button {
+    margin-left: 1rem;
+  }
+  .gallery {
+    column-count: 2;
+  }
+  .head {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .gallery {
+    column-count: 3;
+  }
+}
+
+@media (min-width: 1400px) {
+  .gallery {
+    column-count: 4;
+  }
+}
