--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 * {
   padding: 0px;
   margin: 0px;
+  font-family: 'Gotu', sans-serif;
 }
 html {
   scroll-behavior: smooth;
@@ -96,4 +97,14 @@ svg {
   padding: 5px;
   margin: 5px;
   text-align: center;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  height: 50px;
+  width: 50px;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  border: 1px solid var(--secondary-light);
+  background-color: var(--secondary-light);
 }
